# spectre-light

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  Roadmap.md  appveyor.yml  codecov.yml  input_example.txt  spectre-light.sln  spectre-light.vcxproj  spectre-light.vcxproj.filters
doc/: Doxyfile
docs/: Doxyfile
spectre-light.xcodeproj/: project.pbxproj
src/: README.md  application_starter.cpp  localization.h  main.cpp  renderer.cpp  renderer.hpp  settings.h  validator.h
src/accelerators/: bvh.cpp  bvh.hpp  kdtree.cpp  kdtree.hpp
src/cameras/: camera.cpp  camera.hpp  camera360.cpp  camera360.hpp  camera_orthographic.cpp  camera_orthographic.hpp  camera_perspective.cpp  camera_perspective.hpp  image_film.cpp  image_film.hpp  image_output.cpp  image_output.hpp  orthographic_camera.cpp  orthographic_camera.hpp  perspective_camera.cpp  perspective_camera.hpp  types_camera.h
src/geometry/: AABB.cpp  AABB.hpp  matrix4.cpp  matrix4.hpp  point2.cpp  point2.hpp  point3.cpp  point3.hpp  ray.cpp  ray.hpp  vec2.cpp  vec2.hpp  vec3.cpp  vec3.hpp
src/integrators/: bidirpt.cpp  bidirpt.hpp  integrator.hpp  light_integrator.hpp  path_tracer.cpp  path_tracer.hpp  ray_tracer.cpp  ray_tracer.hpp
src/lights/: area_light.cpp  area_light.hpp  light.cpp  light.hpp  light_area.cpp  light_area.hpp  light_omni.cpp  light_omni.hpp  light_sky.cpp  light_sky.hpp  light_spot.cpp  light_spot.hpp  light_sun.cpp  light_sun.hpp  types_light.h
src/materials/: bdf.cpp  bdf.hpp  bsdf.hpp  bump.cpp  bump.hpp  dual.cpp  dual.hpp  fresnel_conditions.cpp  fresnel_conditions.hpp  lambertian.cpp  lambertian.hpp  material_library.cpp  material_library.hpp  metals.hpp  microfacet.cpp  microfacet.hpp  microfacet_distributions.cpp  microfacet_distributions.hpp  multi_bsdf.cpp  multi_bsdf.hpp  oren_nayar.cpp  oren_nayar.hpp  reflection.cpp  reflection.hpp  refraction.cpp  refraction.hpp  shading_space.cpp  shading_space.hpp  single_brdf.cpp  single_brdf.hpp  types_metal.h  types_microfacet.h
src/parsers/: README.md  chunk.cpp  chunk.hpp  chunk_wrapper.cpp  chunk_wrapper.hpp  config_bridge.h  config_driver.cpp  config_driver.hpp  config_lexer.l  config_parser.tab.c  config_parser.tab.cc  config_parser.tab.h  config_parser.tab.hh  config_parser.y  input.md  lex.yy.c  lex.yy.cc  location.hh  obj_driver.hpp  obj_lexer.l  obj_parser.cpp  obj_parser.hpp  obj_parser.y  parsed_structs.c  parsed_structs.h  parser.cpp  parser.hpp  parser_config.cpp  parser_config.hpp  parser_obj.cpp  parser_obj.hpp  position.hh  stack.hh
src/primitives/: asset.cpp  asset.hpp  box.cpp  box.hpp  hit_point.cpp  hit_point.hpp  mesh.cpp  mesh.hpp  obox.cpp  obox.hpp  shape.cpp  shape.hpp  sphere.cpp  sphere.hpp  triangle.cpp  triangle.hpp
src/samplers/: box_filter.cpp  box_filter.hpp  distributions.cpp  distributions.hpp  filter.cpp  filter.hpp  filter_box.cpp  filter_box.hpp  filter_gaussian.cpp  filter_gaussian.hpp  filter_lanczos.cpp  filter_lanczos.hpp  filter_mitchell.cpp  filter_mitchell.hpp  filter_tent.cpp  filter_tent.hpp  gaussian_filter.cpp  gaussian_filter.hpp  lanczos_filter.cpp  lanczos_filter.hpp  mitchell_filter.cpp  mitchell_filter.hpp  random_sampler.cpp  random_sampler.hpp  sampler.cpp  sampler.hpp  sampler_random.cpp  sampler_random.hpp  sampler_stratified.cpp  sampler_stratified.hpp  stratified_sampler.cpp  stratified_sampler.hpp  tent_filter.cpp  tent_filter.hpp  types_sampler.h
src/textures/: bump.cpp  bump.hpp  image_map.cpp  image_map.hpp  mask_boolean.cpp  mask_boolean.hpp  texture.cpp  texture.hpp  texture_bump.cpp  texture_bump.hpp  texture_height.cpp  texture_height.hpp  texture_image.cpp  texture_image.hpp  texture_library.cpp  texture_library.hpp  texture_normal.cpp  texture_normal.hpp  texture_uniform.cpp  texture_uniform.hpp  types_imgchannel.h  uniform.cpp  uniform.hpp
src/utility/: WELLrng.c  WELLrng.h  array2D.cpp  array2D.hpp  bit_hacks.h  color.cpp  color.hpp  console.cpp  console.hpp  date.cpp  date.hpp  file.cpp  file.hpp  imageIO.cpp  imageIO.hpp  occlusion_tester.cpp  occlusion_tester.hpp  parser.cpp  parser.hpp  scene.cpp  scene.hpp  spectrum.cpp  spectrum.hpp  utility.cpp  utility.hpp  wellrng.cpp  wellrng.hpp
tests/: Point3_tests.cpp  aabb_tests.cpp  asset_tests.cpp  box_tests.cpp  camera_tests.cpp  color_tests.cpp  console_tests.cpp  file_tests.cpp  filter_tests.cpp  imagefilm_tests.cpp  imageio_tests.cpp  lights_tests.cpp  materiallibrary_tests.cpp  materials_tests.cpp  matrix4_tests.cpp  mesh_tests.cpp  microfacets_tests.cpp  normal_tests.cpp  occlusiontester_tests.cpp  parser_obj_tests.cpp  parser_tests.cpp  ray_tests.cpp  samplers_tests.cpp  scene_tests.cpp  spectrum_tests.cpp  sphere_tests.cpp  texturelibrary_tests.cpp  textures_tests.cpp  triangle_tests.cpp  utility_tests.cpp  vec2_tests.cpp  vec3_tests.cpp
tests/assets/: binary.ppm  generic.tga  generic.tiff  generic_noalpha.tif  multiple_spaces.ppm
tests/distributions/: distributions.hpp  distributions_main.cpp  filter_distributions.cpp  filters_distributions.cpp  filters_gnuplot.txt  materials_distributions.cpp  materials_gnuplot.txt  microfacets_distributions.cpp  microfacets_gnuplot.txt  primitives_distributions.cpp  primitives_gnuplot.txt  samplers_distributions.cpp  samplers_gnuplot.txt
tests/unit-testing/: aabb_tests.cpp  array2d_tests.cpp  asset_tests.cpp  box_tests.cpp  camera_tests.cpp  color_tests.cpp  console_tests.cpp  date_tests.cpp  file_tests.cpp  filter_tests.cpp  imagefilm_tests.cpp  imageio_tests.cpp  imagemap_tests.cpp  light_tests.cpp  materiallibrary_tests.cpp  materials_tests.cpp  matrix4_tests.cpp  mesh_tests.cpp  microfacets_tests.cpp  normal_tests.cpp  occlusiontester_tests.cpp  parser_obj_tests.cpp  parser_tests.cpp  point2_tests.cpp  point3_tests.cpp  ray_tests.cpp  sampler_tests.cpp  scene_tests.cpp  serialization_tests.cpp  spectre_tests.h  spectrum_tests.cpp  sphere_tests.cpp  texture_tests.cpp  texturelibrary_tests.cpp  triangle_tests.cpp  (+3 more)
textures/: texture.hpp
visualstudio/: spectre-light.sln  spectre-light.vcxproj  spectre-light.vcxproj.filters  tests.vcxproj  tests.vcxproj.filters
(+96 files in other folders)
